--- a/index.css
+++ b/index.css
@@ -57,6 +57,19 @@
    display: none;
    top: 50px;
 }
+.itemcount{
+   height: 25px;
+    width: 28px;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    top: 7px;
+    left: 475px;
+    background-color: rgb(240, 134, 3);
+    border-radius: 44px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
 .cartname{
    margin-left: 10px;
    font-weight: 700;
@@ -324,4 +337,78 @@
    font-weight: 500;
    margin-left: 8px;
    font-size: 17px;
+}
+
+
+/* mobile css */
+
+.mobilenavlelement{
+   display: none;
+   height: 53px;
+}
+.forflex{
+   width: 100%;
+   height: 100%;
+   display: flex;
+}
+.leftmobilenavelement{
+   display: flex;
+   width: 50%;
+   align-items: center;
+   justify-content: space-evenly;
+   height: 100%;
+}
+.rightmobilenavelement{
+   width: 50%;
+   height: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: end;
+}
+.mobilecartimage{
+   height: 20px;
+   width: 20px;
+    margin-right: 20px;
+}
+.mobileprofile{
+   height: 30px;
+   width: 30px;
+   margin-right: 25px;
+  
+
+}
+
+
+
+
+
+
+
+
+
+
+/* responsive */
+@media (min-width:350px) and (max-width:450px){
+   .navelement{
+      display: none;
+   }
+   .mainimage{
+      margin-top: 0px;
+      width: 100%;
+   }
+   .maincontent{
+      flex-direction: column;
+   }
+   .rightmaincontent{
+      width: 100%;
+   }
+   .smallimagesection{
+      display: none;
+   }
+   .leftmaincontent{
+      width: 100%;
+   }
+   .mobilenavlelement{
+      display: block;
+   }
 }
