--- a/index.css
+++ b/index.css
@@ -354,6 +354,7 @@
    align-items: center;
    justify-content: space-evenly;
    height: 100%;
+   position: relative;
 }
 .rightmobilenavelement{
    width: 50%;
@@ -361,6 +362,7 @@
    display: flex;
    align-items: center;
    justify-content: end;
+   position: relative;
 }
 .mobilecartimage{
    height: 20px;
@@ -374,6 +376,112 @@
   
 
 }
+.menusection{
+   width: 100%;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    display: none;
+    
+}
+.cross{
+   margin:15px;
+}
+.mobileelement1{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   gap: 30px;
+}
+.mobileelement{
+   text-decoration: none;
+   color: var(--text-color);
+   font-family: var(--font-style);
+}
+.cartdiv{
+   height: 270px;
+    width: 366px;
+    background-color: aqua;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: -171px;
+    margin-top: 46px;
+    border-radius: 20px;
+    display: none;
+}
+
+.mobilecartname{
+   margin-left: 15px;
+   margin-top: 15px;
+   font-family: var(--font-style);
+   font-weight: 500;
+}
+.mobilehr{
+   border: 1px solid black;
+   margin-top: 15px;
+   width: 94%;
+   margin-left: 3%;
+}
+.mobileitemselect{
+   display: flex;
+   width: 100%;
+   height: 115px;
+   justify-content: space-evenly;
+   align-items: center;
+}
+.allfullcart{
+   display: none;
+}
+.mobilethunblain{
+   height: 70px;
+   width: 70px;
+}
+.itemnameinmobile{
+   font-family: var(--font-style);
+   color: var(--text-color);
+
+}
+.mobileammount{
+   font-family: var(--font-style);
+   color: var(--text-color);
+}
+.mobiletotalammount{
+   color: black;
+   font-weight: 500;
+}
+.mobileconfrm{
+   height: 81px;
+   width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.proceed{
+   height: 80%;
+   width: 90%;
+   border: none;
+   background-color: rgb(240, 134, 3);
+   border-radius: 5px;
+   font-family: var(--font-style);
+   font-family: 500;
+}
+
+.emptycart{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 200px;
+}
+
+
+
+
+
+
 
 
 
